--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fridgeo</title>
-    <link rel="stylesheet" href="/css/firstpage.css">
+    <link rel="stylesheet" href="/firstpage.css">
 </head>
 <body>
     <section class="nav">
@@ -35,7 +35,7 @@
                 <p class="fon-text">Свежие пpодукты - это пpо здоровье</p>
                 <button class="create-fridge">Создать холодильник</button>
             </div>
-            <img class ="meet" src="/images/Rectangle%202996.png" alt="">
+            <img class ="meet" src="/img/Rectangle%202996.png" alt="">
         </div>
     </section>
     <div class="cardPage">
@@ -43,27 +43,27 @@
         <div class="images-all">
 
             <div class="image-cont">
-                <img class="image-prod" src="/images/Rectangle%202997.png">
+                <img class="image-prod" src="/img/Rectangle%202997.png">
                 <div class="text">...</div>
             </div>
 
             <div class="image-cont">
-                <img class="image-prod" src="/images/Rectangle%202998.png">
+                <img class="image-prod" src="/img/Rectangle%202998.png">
                 <div class="text">...</div>
             </div>
 
             <div class="image-cont">
-                <img class="image-prod" src="/images/Rectangle%202999.png">
+                <img class="image-prod" src="/img/Rectangle%202999.png">
                 <div class="text">...</div>
             </div>
 
             <div class="image-cont">
-                <img class="image-prod" src="/images/Rectangle%203000.png">
+                <img class="image-prod" src="/img/Rectangle%203000.png">
                 <div class="text">...</div>
             </div>
 
             <div class="image-cont">
-                <img class="image-prod" src="/images/Rectangle%203001.png">
+                <img class="image-prod" src="/img/Rectangle%203001.png">
                 <div class="text">...</div>
             </div>
 
@@ -74,8 +74,8 @@
         <p class="contacts">Контакты</p>
         <div class="last-stroke">
             <div class="icons">
-                <img class="img-inf" src="/images/vk.png" width="100" height="100" alt="">
-                <img src="/images/Telegram%20svg.png" width="100" height="100" alt="">
+                <img class="img-inf" src="/img/vk.png" width="100" height="100" alt="">
+                <img src="/img/Telegram%20svg.png" width="100" height="100" alt="">
             </div>
             <p class="inc"> Fridgeo inc.</p>
         </div>
