finished build maket fot first page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width" />
+
     <meta charset="UTF-8">
     <title>Fridgeo</title>
-    <link rel="stylesheet" href="/firstpage.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <section class="nav">
@@ -46,27 +48,56 @@
                 <img class="image-prod" src="/img/Rectangle%202997.png">
                 <div class="text">...</div>
             </div>
+            <script src="/js/script.js"></script>
 
-            <div class="image-cont">
+            <div class="image-cont sec">
                 <img class="image-prod" src="/img/Rectangle%202998.png">
                 <div class="text">...</div>
             </div>
 
-            <div class="image-cont">
+            <div class="image-cont third">
                 <img class="image-prod" src="/img/Rectangle%202999.png">
                 <div class="text">...</div>
             </div>
 
-            <div class="image-cont">
+            <div class="image-cont quad">
                 <img class="image-prod" src="/img/Rectangle%203000.png">
                 <div class="text">...</div>
             </div>
 
-            <div class="image-cont">
+            <div class="image-cont five">
                 <img class="image-prod" src="/img/Rectangle%203001.png">
                 <div class="text">...</div>
             </div>
 
+        </div>
+    </div>
+
+    <div class="help">
+        <div class="help-text">
+            <h1>Мы поможем</h1>
+            <span>С помощью передовых технологий аналитики наша система поможет разобраться в еженедельных тратах. Вы сможете определиться, какие продукты покупать чаще, а какие реже. </span>
+        </div>
+        <div class="help-image">
+            <img src="img/Rectangle%203004.png">
+            <button class="help-button">Зарегестрироваться</button>
+        </div>
+    </div>
+
+    <div class="help">
+        <div class="help-text second">
+            <h1>Личный кабинет</h1>
+
+            <p>В личном кабинете вы сможете:</p>
+            <ul>
+                <li>Отслеживать сроки годности испорченных пpодуктов.</li>
+                <li>Статистика посещения сайта и пpиложения.</li>
+                <li>Получать бонусы за активность.</li>
+            </ul>
+        </div>
+        <div class="help-image">
+            <img src="img/Rectangle%203005.png">
+            <button class="help-button">Зарегестрироваться</button>
         </div>
     </div>
 
@@ -80,5 +111,7 @@
             <p class="inc"> Fridgeo inc.</p>
         </div>
     </div>
+
+
 </body>
 </html>
